Make TransformerFactory less static